<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".USERLANDING">

    <!-- Personal Info Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#E6BA4A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/black"
            android:text="@string/personal_info"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <ImageButton
            android:id="@+id/uploadImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:src="@drawable/image_search"
            android:background="#E6BA4A"
            android:alpha="0.7"/>

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/userImage"
            android:fontFamily="sans-serif-black"
            android:text="@string/EMPTY"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/displayName"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/userImage"
            android:text="@string/xxx"
            android:textSize="15sp" />
    </RelativeLayout>

    <!-- Stats Cards Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp"
        android:layout_marginTop="-100dp">

        <!-- Current Apps Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:cardBackgroundColor="#E6BA4A">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/curr1"/>

                <TextView
                    android:id="@+id/currapps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/currapps"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/lable_dsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currapps"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/_0"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Previous Stats Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:cardBackgroundColor="#E6BA4A">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/previous"/>

                <TextView
                    android:id="@+id/lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/previous"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/lable_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lable"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/_0"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <!-- Input Fields Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/name"
                    android:drawablePadding="12dp"
                    android:inputType="textPersonName"
                    android:text=""/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email_land"
                    android:drawablePadding="12dp"
                    android:inputType="textEmailAddress"
                    android:text=""/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/contact">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/contact"
                        android:drawablePadding="12dp"
                        android:inputType="phone"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_land"
                    android:drawablePadding="12dp"
                    android:inputType="textPassword"
                    android:text=""/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="25sp"
                android:backgroundTint="#E6BA4A"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E6BA4A"
            android:text="@string/logout"
            android:id="@+id/sign_out"
            android:layout_margin="5dp">

        </Button>
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E6BA4A"
            android:text="@string/next"
            android:id="@+id/next" android:layout_marginStart="200dp">

            </Button>
    </LinearLayout>

</LinearLayout>
