<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#D9F1C5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/black"
            android:text="DASHBOARD"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            app:shapeAppearanceOverlay="@style/roundedImageView" />
    </RelativeLayout>

    <!-- Stats Cards Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp"
        android:layout_marginTop="-100dp">

        <!-- Current Apps Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:cardBackgroundColor="#C2E3A5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/curr1"/>

                <TextView
                    android:id="@+id/currapps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/currapps"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/lable_dsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currapps"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/_0"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Previous Stats Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:cardBackgroundColor="#CBEAB0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/previous"/>

                <TextView
                    android:id="@+id/lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/previous"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/lable_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lable"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/boogaloo"
                    android:text="@string/_0"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <!-- Input Fields Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:drawablePadding="12dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:drawablePadding="12dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/contact"
                android:textSize="21sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:drawablePadding="12dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>

    <!-- Buttons Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/boogaloo"
            android:backgroundTint="#C8E6AD" />


    </LinearLayout>

</LinearLayout>